--- a/css/style__media-query__tablette.css
+++ b/css/style__media-query__tablette.css
@@ -7,22 +7,10 @@
     }
     .header
     {
-        display: flex;
         flex-direction: column;
-        height: 12vh;
     }
     .header__logo
     {
-        height: 60%;
-    }
-    .header__nav
-    {
-        height: 40%;
-    }
-    .header__logo, .header__nav
-    {
-        transform: translateY(0);
-        position: static;
         margin-bottom: 20px;
     }
     .header__nav__link
@@ -33,8 +21,8 @@
     .header__nav__link:hover
     {
         display: block;
+        font-weight: bold;
         border-top: none;
-        font-weight: bolder;
         border-bottom: 2px solid #0065FC;
         transform: rotate(-5deg);
         transition: transform 200ms;
@@ -47,28 +35,25 @@
         flex-direction: column;
         align-items: center;
     }
-    .top__heading1
+    .top__heading1, .top__heading4
     {
         font-size: 1.2em;
         margin: 0 0 15px 0;
     }
-    .top__heading4
-    {
-        margin: 0 0 15px 0;
-    }
-    .top__search
-    {
-        height: 4vh;
-    }
-    .top__search__input
+    .top__filtre-child, .top__search__input
     {
         font-size: 0.95em;
     }
     .top__filtres
     {
+        width: 100%;
+        justify-content: center;
         flex-flow: row wrap;
-        align-content: space-between;
-        height: 10vh;
+    }
+    .top__filtre-child
+    {
+        margin: 5px 5px;
+        padding: 10px 10px 10px 40px;
     }
 /*********************Fin Top // Main*********************/
 /*********************Section1 // Main*********************/
@@ -80,11 +65,15 @@
     {
         width: 100%;
         margin: 0;
+        flex-flow: row wrap;
+        padding: 15px;
+    }
+    .section1__aside__title
+    {
+        width: 100%;
         display: flex;
-        flex-direction: column;
-        padding: 10px 10px 20px 10px;
-        height: 65vh;
-        align-items: center;
+        justify-content: center;
+        margin: 0 0 15px 0;
     }
     .section1__aside__title h2
     {
@@ -92,135 +81,94 @@
     }
     .section1__aside__card-container__card
     {
-        width: 70%;
-        height: 28%;
-    }
-    .section1__aside__card-container__card__img-container
-    {
-        width: 45%;
-    }
-    .section1__aside__card-container__card__img-container img
-    {
-        object-fit: cover;
-        height: 100%;
-        max-width: none;
-        min-width: 100%;
-        width: auto;
-        transform: translateY(0);
+        width: 47%;
+        height: 150px;
+        margin-bottom: 0;
     }
     .section1__left
     {
         width: 100%;
-        height: 90vh;
         background-color: white;
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 0;
     }
-    .section1__left__card-container
-    {
-        align-self: center;
-        width: 100%;
-        display: flex;
-        flex-direction: row wrap;
-        align-items: center;
-        justify-content: space-around;
-        height: 95%;
-    }
-    .section1__left__card-container_card
+    .section1__left__card-container__card
     {
         width: 45%;
-        height: 30%;
-
-    }
-    .section1__left__card-container__card__img-container
-    {
-        height: 90%;
-    }
-    .section1__left__card-container__card__img-container img
-    {
-        object-fit: cover;
-        width: 100%;
-        max-height: none;
-        min-height: 100%;
-        height: auto;
     }
 /*********************Fin Section1 // Main*********************/
 /*********************Section2 // Main*********************/
     .section2
     {
-        height: 70vh;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-between;
-        margin: 0 20px 0 20px;
     }
     #section2__title
     {
-        height: 4%;
-        margin: 0;
+        margin: 0 0 20px 0;
     }
     .section2__card-container
     {
-        flex-flow: row wrap;
+        flex-wrap: wrap;
+        margin: 0 15px 15px 15px;
     }
     .section2__card-container__card, .section2__card-container__card--right
     {
         width: 45%;
-        height: 48%;
+        height: 300px;
+        margin-bottom: 20px;
     }
-    .section2__card-container__card__small__img-container
+    .section2__card-container__card__small, .section2__card-container__card__medium, .section2__card-container__card__half
     {
-        height: 68%;
-    }
-    .section2__card-container__card__img-container
-    {
-        height: 85%;
-    }
-    .section2__card-container__card__small
-    {
-        height: 48%;
-    }
-    .section2__card-container__card__title
-    {
-        height: 15%;
-    }
-    .section2__card-container__card__small__title
-    {
-        height: 32%;
-    }
-    .section2__card-container__card__title, .section2__card-container__card__small__title
-    {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0;
-    }
-    .section2__card-container__card__img-container img,.section2__card-container__card__small__img-container img
-    {
-        object-fit: cover;
-        height: 100%;
-        max-width: none;
-        min-width: 100%;
-        width: auto;
-        transform: translateY(0);
+        height: 46%;
     }
 /*********************Fin Section2 // Main*********************/
 /*********************Footer*********************/
     .footer
     {
-        margin-top: 10px;
+        margin-top: 0;
         flex-flow: row wrap;
-        align-content: space-around;
-        justify-content: center;
-        height: 25vh;
-        padding: 0;
+        justify-content: space-around;
+        padding: 10px 0;
     }
     .footer__nav
     {
-        width: 50%;
-        text-align: center;
+        width: auto;  
+    }
+    .footer__nav h4
+    {
+        margin-bottom: 10px;
+    }
+    .footer__nav ul li
+    {
+        margin-bottom: 10px;
+        font-size: 0.90em;
     }
 /*********************Fin Footer*********************/
+}
+@media screen and (min-width: 993px) and (max-width: 1150px)
+{
+    html
+    {
+        font-size: 0.85rem;
+    }
+    .section1__left__card-container__card
+    {
+        height: 150px;
+    }
+    .section1__aside__card-container__card
+    {
+        height: 110px;
+    }
+    .section1__aside__card-container__card p
+    {
+        margin-bottom: 10px;
+    }
+    .section1__left__link-container
+    {
+        margin-bottom: 0;
+    }
 }
